# Django_project

./: .env.sample  README.md  catalog_auth.json  catalog_fixture.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  basic_design.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_description_and_more.py
catalog/templates/catalog/: basic_design.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: header_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_country.py
users/templates/users/: login.html  register.html
